--- a/doc/smart_ptr/shared_ptr.adoc
+++ b/doc/smart_ptr/shared_ptr.adoc
@@ -178,8 +178,11 @@ namespace boost {
 
     void swap(shared_ptr & b) noexcept;
 
-    template<class Y> bool owner_before(shared_ptr<Y> const & rhs) const noexcept;
-    template<class Y> bool owner_before(weak_ptr<Y> const & rhs) const noexcept;
+    template<class Y> bool owner_before(shared_ptr<Y> const & r) const noexcept;
+    template<class Y> bool owner_before(weak_ptr<Y> const & r) const noexcept;
+
+    template<class Y> bool owner_equals(shared_ptr<Y> const & r) const noexcept;
+    template<class Y> bool owner_equals(weak_ptr<Y> const & r) const noexcept;
   };
 
   template<class T, class U>
@@ -645,15 +648,27 @@ Effects:: Exchanges the contents of the two smart pointers.
 
 ### owner_before
 ```
-template<class Y> bool owner_before(shared_ptr<Y> const & rhs) const noexcept;
+template<class Y> bool owner_before(shared_ptr<Y> const & r) const noexcept;
 ```
 ```
-template<class Y> bool owner_before(weak_ptr<Y> const & rhs) const noexcept;
+template<class Y> bool owner_before(weak_ptr<Y> const & r) const noexcept;
 ```
 [none]
 * {blank}
 +
-Effects:: See the description of `operator<`.
+Returns:: See the description of `operator<`.
+
+### owner_equals
+```
+template<class Y> bool owner_equals(shared_ptr<Y> const & r) const noexcept;
+```
+```
+template<class Y> bool owner_equals(weak_ptr<Y> const & r) const noexcept;
+```
+[none]
+* {blank}
++
+Returns:: `true` if and only if `*this` and `r` share ownership or are both empty.
 
 ## Free Functions
 
