--- a/doc/smart_ptr/weak_ptr.adoc
+++ b/doc/smart_ptr/weak_ptr.adoc
@@ -188,7 +188,8 @@ NOTE: These constructors are an extension, not present in `std::weak_ptr`.
 [none]
 * {blank}
 +
-Effects:: Destroys this `weak_ptr` but has no effect on the object its stored pointer points to.
+Effects::
+  Destroys this `weak_ptr` but has no effect on the object its stored pointer points to.
 
 ### assignment
 ```
@@ -217,7 +218,8 @@ long use_count() const noexcept;
 [none]
 * {blank}
 +
-Returns:: 0 if `*this` is empty; otherwise, the number of `shared_ptr` objects that share ownership with `*this`.
+Returns::
+  0 if `*this` is empty; otherwise, the number of `shared_ptr` objects that share ownership with `*this`.
 
 ### expired
 ```
@@ -226,7 +228,8 @@ bool expired() const noexcept;
 [none]
 * {blank}
 +
-Returns:: `use_count() == 0`.
+Returns::
+  `use_count() == 0`.
 
 ### empty
 ```
@@ -246,7 +249,8 @@ shared_ptr<T> lock() const noexcept;
 [none]
 * {blank}
 +
-Returns:: `expired()? shared_ptr<T>(): shared_ptr<T>(*this)`.
+Returns::
+  `expired()? shared_ptr<T>(): shared_ptr<T>(*this)`.
 
 ### reset
 ```
@@ -255,7 +259,8 @@ void reset() noexcept;
 [none]
 * {blank}
 +
-Effects:: Equivalent to `weak_ptr().swap(*this)`.
+Effects::
+  Equivalent to `weak_ptr().swap(*this)`.
 
 ### swap
 ```
@@ -264,7 +269,8 @@ void swap(weak_ptr & b) noexcept;
 [none]
 * {blank}
 +
-Effects:: Exchanges the contents of the two smart pointers.
+Effects::
+  Exchanges the contents of the two smart pointers.
 
 ### owner_before
 ```
@@ -276,7 +282,8 @@ template<class Y> bool owner_before( shared_ptr<Y> const & r ) const noexcept;
 [none]
 * {blank}
 +
-Returns:: See the description of `operator<`.
+Returns::
+  See the description of `operator<`.
 
 ### owner_equals
 ```
@@ -288,7 +295,8 @@ template<class Y> bool owner_equals( shared_ptr<Y> const & r ) const noexcept;
 [none]
 * {blank}
 +
-Returns:: `true` if and only if `*this` and `r` share ownership or are both empty.
+Returns::
+  `true` if and only if `*this` and `r` share ownership or are both empty.
 
 ## Free Functions
 
@@ -314,7 +322,8 @@ template<class T> void swap(weak_ptr<T> & a, weak_ptr<T> & b) noexcept;
 [none]
 * {blank}
 +
-Effects:: Equivalent to `a.swap(b)`.
+Effects::
+  Equivalent to `a.swap(b)`.
 
 ## Frequently Asked Questions
 
