--- a/doc/smart_ptr/shared_ptr.adoc
+++ b/doc/smart_ptr/shared_ptr.adoc
@@ -563,7 +563,8 @@ template<class Y> void reset(shared_ptr<Y> && r, element_type * p) noexcept;
 [none]
 * {blank}
 +
-Effects:: Equivalent to `shared_ptr(std::move(r), p).swap(*this)`.
+Effects::
+  Equivalent to `shared_ptr(std::move(r), p).swap(*this)`.
 
 ### indirection
 ```
@@ -601,7 +602,8 @@ element_type * get() const noexcept;
 [none]
 * {blank}
 +
-Returns:: The stored pointer.
+Returns::
+  The stored pointer.
 
 ### unique
 ```
@@ -610,7 +612,8 @@ bool unique() const noexcept;
 [none]
 * {blank}
 +
-Returns:: `use_count() == 1`.
+Returns::
+  `use_count() == 1`.
 
 ### use_count
 ```
@@ -619,7 +622,8 @@ long use_count() const noexcept;
 [none]
 * {blank}
 +
-Returns:: The number of `shared_ptr` objects, `*this` included, that share ownership with `*this`, or 0 when `*this` is empty.
+Returns::
+  The number of `shared_ptr` objects, `*this` included, that share ownership with `*this`, or 0 when `*this` is empty.
 
 ### conversions
 ```
@@ -644,7 +648,8 @@ void swap(shared_ptr & b) noexcept;
 [none]
 * {blank}
 +
-Effects:: Exchanges the contents of the two smart pointers.
+Effects::
+  Exchanges the contents of the two smart pointers.
 
 ### owner_before
 ```
@@ -656,7 +661,8 @@ template<class Y> bool owner_before(weak_ptr<Y> const & r) const noexcept;
 [none]
 * {blank}
 +
-Returns:: See the description of `operator<`.
+Returns::
+  See the description of `operator<`.
 
 ### owner_equals
 ```
@@ -668,7 +674,8 @@ template<class Y> bool owner_equals(weak_ptr<Y> const & r) const noexcept;
 [none]
 * {blank}
 +
-Returns:: `true` if and only if `*this` and `r` share ownership or are both empty.
+Returns::
+  `true` if and only if `*this` and `r` share ownership or are both empty.
 
 ## Free Functions
 
@@ -736,7 +743,8 @@ template<class T> void swap(shared_ptr<T> & a, shared_ptr<T> & b) noexcept;
 [none]
 * {blank}
 +
-Effects:: Equivalent to `a.swap(b)`.
+Effects::
+  Equivalent to `a.swap(b)`.
 
 ### get_pointer
 ```
@@ -820,7 +828,8 @@ template<class D, class T>
 [none]
 * {blank}
 +
-Returns:: If `*this` owns a deleter `d` of type (cv-unqualified) `D`, returns `&d`; otherwise returns 0.
+Returns::
+  If `*this` owns a deleter `d` of type (cv-unqualified) `D`, returns `&d`; otherwise returns 0.
 
 ### Atomic Access
 
