--- a/doc/smart_ptr.adoc
+++ b/doc/smart_ptr.adoc
@@ -18,40 +18,25 @@ Greg Colvin, Beman Dawes, Peter Dimov, Glen Fernandes
 :leveloffset: +1
 
 include::smart_ptr/introduction.adoc[]
-
 include::smart_ptr/changelog.adoc[]
-
 include::smart_ptr/scoped_ptr.adoc[]
-
 include::smart_ptr/scoped_array.adoc[]
-
 include::smart_ptr/shared_ptr.adoc[]
-
 include::smart_ptr/weak_ptr.adoc[]
-
 include::smart_ptr/make_shared.adoc[]
-
 include::smart_ptr/enable_shared_from_this.adoc[]
-
 include::smart_ptr/enable_shared_from.adoc[]
-
 include::smart_ptr/make_unique.adoc[]
-
 include::smart_ptr/allocate_unique.adoc[]
-
 include::smart_ptr/intrusive_ptr.adoc[]
-
 include::smart_ptr/intrusive_ref_counter.adoc[]
-
 include::smart_ptr/local_shared_ptr.adoc[]
-
 include::smart_ptr/make_local_shared.adoc[]
-
 include::smart_ptr/pointer_cast.adoc[]
-
 include::smart_ptr/pointer_to_other.adoc[]
-
 include::smart_ptr/atomic_shared_ptr.adoc[]
+include::smart_ptr/owner_less.adoc[]
+include::smart_ptr/owner_equal_to.adoc[]
 
 // appendix
 include::smart_ptr/techniques.adoc[]
@@ -73,7 +58,7 @@ This documentation is
 * Copyright 1999 Greg Colvin
 * Copyright 1999 Beman Dawes
 * Copyright 2002 Darin Adler
-* Copyright 2003-2017 Peter Dimov
+* Copyright 2003-2020 Peter Dimov
 * Copyright 2005, 2006 Ion Gaztañaga
 * Copyright 2008 Frank Mori Hess
 * Copyright 2012-2017 Glen Fernandes
