--- a/doc/smart_ptr/allocate_unique.adoc
+++ b/doc/smart_ptr/allocate_unique.adoc
@@ -284,7 +284,7 @@ template<class T, class U, class A>
 * {blank}
 +
 Returns:: The allocator pointer to the allocation.
-Example:: `auto r = boost::get_allocator_ptr(p.release());`
+Example:: `auto r = boost::get_allocator_ptr(p);`
 
 ## Deleter
 
